tests/miniJava/neg/004409_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] else java ( ) { return 0 ; } }
